--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,12 @@
 
 one:
   email: user1@demo.com
-  password_digest: 123456
+  # password_digest: 123456
+  password_digest: <%= BCrypt::Password.create('123456') %>
   role: 1
 
 two:
   email: user2@demo.com
-  password_digest: 123456
+  # password_digest: 123456
+  password_digest: <%= BCrypt::Password.create('123456') %>
   role: 1
